<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/guiface"
    tools:context="bos7.guituner.SetActivity">


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="363dp"
        android:layout_height="28dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="66dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sixStrBtn"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/StandardE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/fifStrBtn"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/StandardA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/sixStrBtn"
        android:layout_marginLeft="22dp" />

    <Button
        android:id="@+id/fouStrBtn"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="22dp"
        android:text="@string/StandardD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/fifStrBtn" />

    <Button
        android:id="@+id/thrStrBtn"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="22dp"
        android:text="@string/StandardG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/fouStrBtn" />

    <Button
        android:id="@+id/secStrBtn"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="22dp"
        android:text="@string/StandardB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/thrStrBtn" />

    <Button
        android:id="@+id/firStrBtn"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="21dp"
        android:text="@string/StandardE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/secStrBtn" />

</android.support.constraint.ConstraintLayout>
